<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".page1Activity.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Page2"
                                    android:textColor="@color/orange"
                                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="180dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@+id/linearLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/mimblu"
                    android:textColor="@color/orange"
                    android:textSize="30sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@color/orange"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-16dp">

            <TextView
                android:id="@+id/heading1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/heading1"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:text="@string/heading2"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@id/heading1"
                tools:layout_editor_absoluteX="30dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            tools:layout_editor_absoluteX="-34dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:text="@string/buttonText"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>