<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="20dp"
        android:foreground="@drawable/cardboard_style"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="@string/mimblu_plus"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <LinearLayout
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/text2">

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="20dp"
                    android:text=""
                    android:textColor="@color/orange"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="5dp"
                    android:text="@string/days"
                    android:textColor="@color/orange"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />


            </LinearLayout>


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="@string/mimblu_plus"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/text1"
                tools:ignore="MissingConstraints,RtlSymmetry"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/video_description"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:text="@string/mimblu_plus"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/description"
                tools:ignore="MissingConstraints,RtlSymmetry"
                tools:layout_editor_absoluteX="16dp" />

            <LinearLayout
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/video_description">

                <TextView
                    android:id="@+id/currency_code"
                    android:layout_width="25dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/inr"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/discounted_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/inr"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/inr"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/rounded_button"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:text="@string/continue_text"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text5"
                app:layout_constraintVertical_bias="0.0" />


            <LinearLayout
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/continue_button">

                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="30dp"
                    android:text="@string/you_save_inr"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="2dp"
                    android:text="@string/_1501"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="3dp"
                    android:text="@string/with_this_plan"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>